# cfb-predictor

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/cfb_predictor/: __init__.py  __main__.py
src/cfb_predictor/core/: cli.py  exceptions.py  logging.py
src/cfb_predictor/data/: __init__.py
src/cfb_predictor/data/gather/: __init__.py
src/cfb_predictor/data/gather/config/: controller.py  model.py
src/cfb_predictor/data/gather/config/configs/: games.yml  lines.yml  roster.yml  teams.yml
src/cfb_predictor/data/process/: __init__.py  process.py
src/cfb_predictor/modeling/data/: __init__.py  datasets.py
src/cfb_predictor/modeling/features/: __init__.py  feature_exploration.ipynb  transforms.py
src/cfb_predictor/modeling/models/: GNNs.py  __init__.py  heads.py
